--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prettier": "prettier --write **/*.json **/*.yml src/instruments/**/*.css",
     "build:instruments": "rollup -c src/instruments/rollup.config.js",
     "build:fbw": "cd src/fbw && ./build.sh",
+    "build:flightplan": "rollup -c src/flightplan/rollup.config.js",
     "postinstall": "husky install"
   },
   "lint-staged": {
